--- a/Project7_scope_time_function/index.html
+++ b/Project7_scope_time_function/index.html
@@ -13,7 +13,7 @@
 <input id="Y_val" value="Y"/>
 <br>
 <button class="button"onclick=";Comp_Function()">Compare </button>
-<p id="Result">Type in "X" and "Y" and press compare button (atm works if x>y) </p>
+<p id="Result">Type in "X" and "Y" and press compare button  </p>
 
 <p class="age">Write your age:</p>
 <input id="Years" value="type your age"/>
