--- a/Project8_string_methods/index.html
+++ b/Project8_string_methods/index.html
@@ -28,7 +28,7 @@
 <button class="button5" onclick="precision_Method()">Precision</button>
 <div>
 <p id="fxed">Round 243.124153634534 </p>
-<button  onclick="Fixed();Value();">Round</button>
+<button  onclick="Fixed();Value();">Round+Value</button>
 <p id="demo"></p>
 </div>
 
